include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = platform-overview
DOC_PAGES =					\
	concepts-boxmodel.page			\
	concepts-deployment.page		\
	concepts-gobject.page			\
	concepts-signals.page			\
	demo-audio-player.vala.page		\
	demo-guitar-tuner.c.page		\
	demo-guitar-tuner.cpp.page		\
	demo-guitar-tuner.py.page		\
	demo-guitar-tuner.vala.page		\
	demo-image-viewer.c.page		\
	demo-image-viewer.cpp.page		\
	demo-image-viewer.js.page		\
	demo-image-viewer.py.page		\
	demo-image-viewer.vala.page		\
	demo-magic-mirror.vala.page		\
	demo-message-board.c.page		\
	demo-photo-wall.c.page			\
	demo-record-collection.js.page		\
	demos.page				\
	dev-build.page				\
	dev-coding.page				\
	dev-help.page				\
	dev-translate.page			\
	getting-ready.page			\
	index.page				\
	overview-communication.page		\
	overview-datastorage.page		\
	overview-gettingstarted.page		\
	overview-help.page			\
	overview-multimedia.page		\
	overview-systemintegration.page		\
	overview-ui.page			\
	sample-avahi-discoverprinter.page	\
	samples.page				\
	sample-telepathy-imstatus.page		\
	tech-atk.page				\
	tech-cairo.page				\
	tech-canberra.page			\
	tech-clutter.page			\
	tech-dbus.page				\
	tech-eds.page				\
	tech-gda.page				\
	tech-gdk.page				\
	tech-gio-network.page			\
	tech-gio.page				\
	tech-glib.page				\
	tech-gobject.page			\
	tech-gsettings.page			\
	tech-gstreamer.page			\
	tech-gtk.page				\
	tech-gupnp.page				\
	tech-keyring.page			\
	tech-notify.page			\
	tech.page				\
	tech-pango.page				\
	tech-soup.page				\
	tech-telepathy.page			\
	tech-tracker.page			\
	tech-webkit.page

DOC_FIGURES =					\
	audio-player/audio-player.vala		\
	guitar-tuner/guitar-tuner.c		\
	guitar-tuner/guitar-tuner.cc		\
	guitar-tuner/guitar-tuner.py		\
	guitar-tuner/guitar-tuner.vala		\
	image-viewer/firefox_test.jpg		\
	image-viewer/gtk_test.png		\
	image-viewer/image-viewer.c		\
	image-viewer/image-viewer.cc		\
	image-viewer/image-viewer.js		\
	image-viewer/image-viewer.py		\
	image-viewer/image-viewer.vala		\
	magic-mirror/magic-mirror-advanced.vala	\
	magic-mirror/magic-mirror.vala		\
	media/fedora.png			\
	media/gnome-devtools.catalog		\
	media/guitar-tuner-glade.png		\
	media/guitar-tuner-pipeline.png		\
	media/guitar-tuner-pipeline.svg		\
	media/guitar-tuner.png			\
	media/image-viewer.png			\
	media/magic-mirror.png			\
	media/message-board.ogv			\
	media/opensuse.png			\
	media/photo-wall-focused.png		\
	media/photo-wall.png			\
	media/record-collection.png		\
	media/ubuntu.png			\
	message-board/message-board.c		\
	photo-wall/photo-wall.c			\
	record-collection/record-collection.js

DOC_INCLUDES=			\
	cc-by-sa-3-0.xml	\
	legal-fdl.xml

DOC_LINGUAS = ca cs de el es fr gl it ja oc pt_BR ru uk sl sv zh_CN
