@YELP_HELP_RULES@

HELP_ID = platform-overview
HELP_FILES =			\
	atk.page		\
	cairo.page		\
	canberra.page		\
	clutter.page		\
	d-bus.page		\
	eds.page		\
	gda.page		\
	gdk.page		\
	gio-network.page	\
	gio.page		\
	gstreamer.page		\
	gtk.page		\
	gupnp.page		\
	help.page		\
	index.page		\
	keyring.page		\
	notify.page		\
	pango.page		\
	telepathy.page		\
	webkit.page		\
	cc-by-sa-3-0.xml	\
	legal-fdl.xml

HELP_LINGUAS = ca cs de el es fr gl it ja oc pt_BR ru uk sl sv zh_CN
