@YELP_HELP_RULES@

HELP_ID = platform-overview

HELP_FILES = \
	cc-by-sa-3-0.xml \
	dev-help-appmenu.page \
	dev-help-build.page \
	dev-help.page \
	dev-help-write.page \
	dev-launching-desktop.page \
	dev-launching-icons.page \
	dev-launching-mime.page \
	dev-launching-startupnotify.page \
	dev-launching.page \
	dev-translate-build.page \
	dev-translate.page \
	dev-translate-setup.page \
	dev-translate-tools.page \
	index.page \
	overview-communication.page \
	overview-io.page \
	overview-media.page \
	overview-net.page \
	overview-settings.page \
	overview-ui.page \
	tech-atk.page \
	tech-avahi.page \
	tech-cairo.page \
	tech-canberra.page \
	tech-champlain.page \
	tech-clutter.page \
	tech-d-bus.page \
	tech-eds.page \
	tech-enchant.page \
	tech-folks.page \
	tech-gda.page \
	tech-gdk.page \
	tech-geoclue2.page \
	tech-geocode-glib.page \
	tech-gio-network.page \
	tech-gio.page \
	tech-glib.page \
	tech-gobject.page \
	tech-gsettings.page \
	tech-gstreamer.page \
	tech-gtk.page \
	tech-gupnp.page \
	tech-help.page \
	tech-network-manager.page \
	tech-notify.page \
	tech-packagekit.page \
	tech.page \
	tech-pango.page \
	tech-polkit.page \
	tech-poppler.page \
	tech-pulseaudio.page \
	tech-secret.page \
	tech-soup.page \
	tech-telepathy.page \
	tech-tracker.page \
	tech-webkit.page \
	tour-application.page \
	tour-events.page \
	tour-get_object.page \
	tour-gjs.page \
	tour-glade.page \
	tour.page \
	tour-summary.page

HELP_EXTRA = \
	tour-summary.js

HELP_MEDIA = \
	media/glade-new-window.png \
	media/glade-result.png \
	media/glade-set-values.png \
	media/totem-screenshot.png

HELP_LINGUAS = ca cs de el es fr gl it ja oc pt_BR ru uk sl sv zh_CN
