# The actual runnable program is set to the SCRIPTS primitive.
# # Prefix bin_ tells where to copy this
bin_SCRIPTS = hello-world
# # List of files to be distributed
EXTRA_DIST =  \
	$(bin_SCRIPTS)
#
#     # The desktop files
desktopdir = $(datadir)/applications
desktop_DATA = \
	hello-world.desktop

CLEANFILES = \
	aclocal.m4		\
	autom4te.cache		\
	config.log		\
	config.status		\
	configure		\
	hello-world.desktop	\
	install-sh		\
	missing			\
	Makefile.in		\
	Makefile
